Added submodule for mc-server-properties-generator

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Home</title>
   </head>
   <body>
-    <p>Content</p>
+    <a href="mc-server-properties-generator/source/index.html">Minecraft Server.Properties Generator</a>
   </body>
 </html>
